--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -51,15 +51,28 @@
         <p>Copyright 2016 - Projeto Sindcon</p>
     </footer>
 </div>
-<!-- Script (Controllers e apps) -->
-<script type="text/javascript" src="js/controle/homeCtrl.js"></script>
-<script type="text/javascript" src="js/controle/moradorCtrl.js"></script>
-<script type="text/javascript" src="js/controle/visitanteCtrl.js"></script>
+<!-- Script (Controllers) -->
+<script type="text/javascript" src="js/controle/acessoCtrl.js"></script>
+<script type="text/javascript" src="js/controle/enderecoCtrl.js"></script>
 <script type="text/javascript" src="js/controle/funcionarioCtrl.js"></script>
-<script type="text/javascript" src="js/controle/relatorioCtrl.js"></script>
+<script type="text/javascript" src="js/controle/moradorCtrl.js"></script>
+<script type="text/javascript" src="js/controle/pessoaCtrl.js"></script>
 <script type="text/javascript" src="js/controle/unidadeCtrl.js"></script>
-<script type="text/javascript" src="js/servico/unidadeService.js"></script>
+<script type="text/javascript" src="js/controle/usuarioCtrl.js"></script>
+<script type="text/javascript" src="js/controle/veiculoCtrl.js"></script>
+<script type="text/javascript" src="js/controle/visitanteCtrl.js"></script>
+<script type="text/javascript" src="js/controle/homeCtrl.js"></script>
+<!-- Script (Services) -->
+<script type="text/javascript" src="js/servico/acessoService.js"></script>
+<script type="text/javascript" src="js/servico/enderecoService.js"></script>
+<script type="text/javascript" src="js/servico/funcionarioService.js"></script>
 <script type="text/javascript" src="js/servico/moradorService.js"></script>
+<script type="text/javascript" src="js/servico/pessoaService.js"></script>
+<script type="text/javascript" src="js/servico/unidadeService.js"></script>
+<script type="text/javascript" src="js/servico/usuarioService.js"></script>
+<script type="text/javascript" src="js/servico/veiculoService.js"></script>
+<script type="text/javascript" src="js/servico/visitanteService.js"></script>
+<!-- Script (Apps) -->
 <script type="text/javascript" src="js/configuracao/appRoutes.js"></script>
 <script type="text/javascript" src="js/configuracao/app.js"></script>
 </body>
